# Monte-Carlo-Simulation-of-the-Gross-Neveu-Model-on-the-Lattice

./: .gitignore  Makefile  README.md  input.inp  main.cc  meson.build  r.md
benchmarking/: plotter.sh  runner.sh
build_clang/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
build_clang/meson-logs/: meson-log.txt
build_clang/meson-private/: coredata.dat.prev
include/: conditionalOStreamClass.h  determinantWrapper.h  gaussianRandomGenerator.h  importanceSamplingIntegrator.h  mpiCommManager.h  observables.h  ranlxd.h  sparseDiracMatrixClass.h  suiteSparseDet.h  utilities.h
python/: matrix.py  polinom_det.py
src/: determinantWrapper.cc  gaussianRandomGenerator.cc  importanceSamplingIntegrator.cc  sparseDiracMatrixClass.cc  suiteSparseDet.c  utilities.cc
